src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__help__tests__draw_help_overlay_at_minimum_terminal_size_snapshot.snap
---
source: src/ui/layout/overlay/help.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 K┌─────────────────────────────────────────────────┐onnectio │
└────────│ Navigation                                      ┃─────────┘
┌ Profile│ Ctrl+h/←   Focus left pane                      ┃─────────┐
│ No sour│ Ctrl+l/→   Focus right pane                     │ from    │
│clipboar│ j/k, ↑/↓   Move or scroll                       │         │
│        │ gg/G       Go to first / last                   │         │
│        │                                                 │         │
│        │ Profiles                                        │         │
│        │ Enter      Connect selected profile             │         │
│        │ e          Open profiles.json in $EDITOR        │         │
│        │                                                 │         │
│        │                    q/󱊷 close                    │         │
└────────└─────────────────────────────────────────────────┘─────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
